--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ header img {
     height: 15%;
 }
 
+h4 {
+    margin: 0;
+}
+
 main, footer {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
